form with the help of HTML5

--- a/account.html
+++ b/account.html
@@ -23,7 +23,7 @@
         <br />
         <br />
         <br />
-        <form action="/submit" method="get">
+        <form action="/personal detail.html" method="get">
             <fieldset>
                 <legend><b>Account</b></legend>
                 <label for="Email Address">Email Address:</label><br />
@@ -44,7 +44,7 @@
                     <img src="./Assignment/Images/back.png" height="30" alt="go to home page">
                 </a>
                 <a href="./personal detail.html">
-                    <img src="./Assignment/Images/next.png" height="30" alt="go to personal detail page">
+                    <input type="image" src="./Assignment/Images/next.png" height="30" alt="go to personal detail page">
                 </a>
             </fieldset>
         </form>
