--- a/personal detail.html
+++ b/personal detail.html
@@ -23,7 +23,7 @@
         <br />
         <br />
         <br />
-        <form action="/submit" method="get">
+        <form action="/your review.html" method="get">
             <fieldset>
                 <legend><b>Personal Details</b></legend>
                 <label for="First Name">First Name:</label><br />
@@ -48,7 +48,7 @@
                     <img src="./Assignment/Images/back.png" height="30" alt="go to account page">
                 </a>
                 <a href="./your review.html">
-                    <img src="./Assignment/Images/next.png" height="30" alt="go to review page">
+                    <input type="image" src="./Assignment/Images/next.png" height="30" alt="go to review page">
                 </a>
             </fieldset>
         </form>
