--- a/your review.html
+++ b/your review.html
@@ -23,7 +23,7 @@
         <br />
         <br />
         <br />
-        <form action="/submit" method="get">
+        <form action="/index.html" method="get">
             <fieldset>
                 <legend><b>Your Review</b></legend>
                 <br />
