--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="/submit" method="get">
+    <form action="/account.html" method="get">
         <center>
             <div>
                 <h1>
@@ -32,7 +32,7 @@
                     Click below to Start
                 </p>
                 <a href="./account.html">
-                    <img src="./Assignment/Images/index.png" height="100" alt="Go to Account">
+                    <input type="image" src="./Assignment/Images/index.png" height="100" alt="Go to Account">
                 </a>
 
             </div>
