form with the help of html5

--- a/your review.html
+++ b/your review.html
@@ -63,7 +63,9 @@
                 <a href="./personal detail.html">
                     <img src="./Assignment/Images/back.png" height="30" alt="go to personal page">
                 </a>
+                   <a href="./index.html">
                 <input type="image" src="./Assignment/Images/submit.png" height="30" alt="Submit">
+                </a>
 
 
             </fieldset>
