form with the help of html5

--- a/personal detail.html
+++ b/personal detail.html
@@ -39,7 +39,7 @@
                 <br />
                 <br />
                 <label for="Social Link">Social Link:</label><br />
-                <input type="text" maxlength="13" placeholder="Enter Facebook/Linkedin profile link" name="Social Link"
+                <input type="text" placeholder="Enter Facebook/Linkedin profile link" name="Social Link"
                     id="Social Link" required>
                 <br />
                 <br />
