--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Click below to Start
                 </p>
                 <a href="./account.html">
-                    <input type="image" src="./Assignment/Images/index.png" height="100" alt="Go to Account">
+                    <img src="./Assignment/Images/index.png" height="100" alt="Go to Account">
                 </a>
 
             </div>
