--- a/personal detail.html
+++ b/personal detail.html
@@ -48,7 +48,7 @@
                     <img src="./Assignment/Images/back.png" height="30" alt="go to account page">
                 </a>
                 <a href="./your review.html">
-                    <input type="image" src="./Assignment/Images/next.png" height="30" alt="go to review page">
+                    <img src="./Assignment/Images/next.png" height="30" alt="go to review page">
                 </a>
             </fieldset>
         </form>
