--- a/account.html
+++ b/account.html
@@ -44,7 +44,7 @@
                     <img src="./Assignment/Images/back.png" height="30" alt="go to home page">
                 </a>
                 <a href="./personal detail.html">
-                    <input type="image" src="./Assignment/Images/next.png" height="30" alt="go to personal detail page">
+                    <img src="./Assignment/Images/next.png" height="30" alt="go to personal detail page">
                 </a>
             </fieldset>
         </form>
