--- a/your review.html
+++ b/your review.html
@@ -64,7 +64,7 @@
                     <img src="./Assignment/Images/back.png" height="30" alt="go to personal page">
                 </a>
                    <a href="./index.html">
-                <input type="image" src="./Assignment/Images/submit.png" height="30" alt="Submit">
+                <img src="./Assignment/Images/submit.png" height="30" alt="Submit">
                 </a>
 
 
