--- a/your review.html
+++ b/your review.html
@@ -51,7 +51,7 @@
                 <br />
                 <br />
                 <label for="Documents">Documents:</label><br />
-                <input type="file">
+                <input type="file"> 
                 <br />
                 <br />
 
@@ -64,7 +64,7 @@
                     <img src="./Assignment/Images/back.png" height="30" alt="go to personal page">
                 </a>
                    <a href="./index.html">
-                <img src="./Assignment/Images/submit.png" height="30" alt="Submit">
+                <input type="image" src="./Assignment/Images/submit.png" height="30" alt="Submit">
                 </a>
 
 
